--- a/index.html
+++ b/index.html
@@ -13,6 +13,7 @@ layout: page
 <strong> 上海交通大学 </strong> 2020.09-2024.07 <br>
 · 人工智能（主修）<br>
 · 工业设计（辅修）<br>
+<br>
 GPA: 3.76/4.3，年级排名 26/88 <br>
 </div>
 </div>
@@ -25,20 +26,20 @@ GPA: 3.76/4.3，年级排名 26/88 <br>
   <div class="manual manual-title"> 技能 </div>
 <p>  <div class="manual-content">
 
-<strong> DCC 软件 </strong> <br>
+DCC 软件 <br>
 · 能够较熟练使用blender、Houdini、
 SD、Zbrush、MD <br>
 · 会 SpeedTree、SP、Maya、3dsMax
 的基础操作 <br>
-<strong> 游戏引擎 </strong> <br>
+<br>
+游戏引擎 <br>
 · 有 UE、Unity3D 使用经验 <br>
-<strong> 编程 </strong> <br>
+<br>
+编程 <br>
 · C++、Python、C#、GLSL <br>
-<strong> 其他 </strong> <br>
+<br>
+其他 <br>
 · PS，PR，AE <br>
 </div>
 </div>
-
-
-
 </div>
