--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@ layout: page
 · 人工智能（主修）<br>
 · 工业设计（辅修）<br>
 <br>
-GPA: 3.76/4.3，年级排名 26/88 <br>
+GPA: 3.77/4.3，年级排名 27/88 <br>
 </div>
 </div>
 
@@ -36,7 +36,7 @@ SD、Zbrush、MD <br>
 · 有 UE、Unity3D 使用经验 <br>
 <br>
 编程 <br>
-· C++、Python、C#、GLSL <br>
+· Python、C++、C#、GLSL <br>
 <br>
 其他 <br>
 · PS，PR，AE <br>
